ibc-solana/packages/solana-ibc-macros/tests/ui/recv_packet_no_return_type.stderr
error: Callback 'on_recv_packet' must return 'Result<Vec<u8>>', found ''
 --> tests/ui/recv_packet_no_return_type.rs:4:1
  |
4 | #[ibc_app]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ibc_app` (in Nightly builds, run with -Z macro-backtrace for more info)
